# cardinal

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.ar-SA.md  README.de-DE.md  README.es-ES.md  README.fr-FR.md  README.hi-IN.md  README.it-IT.md  README.ja-JP.md  README.ko-KR.md  README.md  README.pt-BR.md  README.ru-RU.md  README.tr-TR.md  README.uk-UA.md  README.zh-CN.md  README.zh-TW.md  book.toml  cardinal.h  rust-toolchain.toml
.github/workflows/: rust-ci.yml
cardinal/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
cardinal-sdk/: Cargo.toml
cardinal-sdk/examples/: fs_visit.rs
cardinal-sdk/src/: database.rs  event_stream.rs  fs_visit.rs  lib.rs  main.rs  utils.rs
cardinal-syntax/src/: lib.rs
cardinal-syntax/tests/: argument_classification.rs  boolean.rs  common.rs  doc_examples.rs  errors.rs  filter_kinds_coverage.rs  (+9 more)
doc/: README.ar-SA.md  README.de-DE.md  README.es-ES.md  README.fr-FR.md  README.hi-IN.md  README.it-IT.md  README.ja-JP.md  README.ko-KR.md  README.pt-BR.md  README.ru-RU.md  README.tr-TR.md  README.uk-UA.md  README.zh-CN.md  README.zh-TW.md  background-event-loop.md  fswalk.md  ipc-commands.md  project-overview.md  runtime-lifecycle.md  search-cache.md  search-syntax.md  todo.md
e2e-tests/: Cargo.toml
e2e-tests/examples/: dump_tree.rs
e2e-tests/src/: lib.rs
fswalk/: Cargo.toml
lsf/: Cargo.toml
namepool/: Cargo.toml
query-segmentation/: Cargo.toml
search-cache/: Cargo.toml
slab-mmap/: Cargo.toml
src/: c.rs  fsevent.rs  fsevent_flags.rs  lib.rs  processor.rs
was/: Cargo.toml
(+283 files in other folders)
